--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,8 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Use a package of configuration called an orb.
+version: 2.0
 orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+    hello: circleci/hello-build@0.0.5
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
-version: 2.1
-executors:
-  my-executor:
-    docker:
-      - image: circleci/ruby:2.5.1-node-browsers
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-
-jobs:
-  my-job:
-    executor: my-executor
-    steps:
-      - run: echo outside the executor
-See the Using Parameters in Executors section of the Reusing Config document for examples of parameterized executors.
+    "Hello Workflow":
+        jobs:
+          - hello/hello-build
 
